service/infra/k8s/22-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: boardgame-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: boardgame-backend:latest
          imagePullPolicy: IfNotPresent
          command:
            - celery
            - -A
            - boardgame_rules_backend.tasks_app.celery:celery_app
            - worker
            - --loglevel=info
          resources:
            requests:
              cpu: "2"
              memory: 1Gi
            limits:
              cpu: "3"
              memory: 2Gi
